Fix firefox scrollbar

--- a/public/style/plugin.css
+++ b/public/style/plugin.css
@@ -177,6 +177,7 @@
   background: #fff;
   z-index: 99999;
   opacity: 0.97;
+  overflow-y: hidden;
 }
 
 #nb-app .nb-sidebar.animatable-width {
@@ -902,15 +903,15 @@
   background-color: #444;
 }
 #nb-app .editor-view .footer .checkbox-buttons button.submit {
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: #38155a;
+  border-color: #38155a;
 }
 #nb-app .editor-view .footer .checkbox-buttons button.submit:disabled {
   cursor: not-allowed;
   opacity: 0.5;
 }
 #nb-app .editor-view .footer .checkbox-buttons button.submit:enabled:hover {
-  background-color: #0069d9;
+  background-color: #2c0f48;
 }
 
 #nb-app .ql-toolbar {
@@ -1530,7 +1531,7 @@ nb-innotation-controller {
 /* Firefox */
 * {
   scrollbar-width: thin;
-  scrollbar-color: #333 #c9c9c9;
+  scrollbar-color: #999 #c9c9c9;
 }
 
 /* Chrome, Edge, and Safari */
